syntax = "proto3";
package meta;

message VideoMeta {
    string id = 1;
    string name = 2;
}
